fixing jumbotron image on mobile

--- a/public/assets/style.css
+++ b/public/assets/style.css
@@ -586,6 +586,15 @@ font-family:'Raleway', sans-serif;
 
 @media only screen and (max-width:768px) {
 
+#section-1 {
+	background-attachment: scroll;
+	background-position: cover;
+	width: 100% !important;
+	height: 500px;
+	overflow: hidden;
+	
+}	
+
 #bs-over .jumbotron h1 {
 	padding: 60px 20px 0px;
 }
